Changelog for mk-table-sync:

   * Removed string interpolation from debugging calls (issue 308)
   * Connection options were not read from the [client] section (issue 249).
   * Set connection options immediately after connecting (issue 286).
   * Made --where and --replicate mutually exclusive (issue 302).

2009-03-01: version 1.0.13

   * Added --explainhosts option (issue 293).
   * Throw an error when trying to use D= to restrict syncing to one database.
   * Checking tables for triggers caused a crash (issue 262).
   * Database or table names with spaces caused a crash (issue 262).

2009-02-01: version 1.0.12

   * An older DBD library caused an infinite loop (issue 11).
   * Updated common modules.

2008-12-01: version 1.0.11

   * Updates to shared code.
   * The tool now requires at least --print, --execute or --test (issue 111).
   * --askpass and a bareword host in the DSN caused a crash (issue 108).
   * Filters on objects weren't applied as early as possible (issue 99).

2008-10-17: version 1.0.10

   * --tables was not honored when using --replicate (issue 79).
   * Updated documentation (issue 85).
   * --replicate failed cryptically on truncated boundaries column (issue 81).

2008-09-19: version 1.0.9

   * Added --nouseindex option (issue 8).
   * Dies if any dest table has triggers unless --ignore-triggers (issue 37).
   * Added better support for CRC32 (issue 43).
   * Made debugging code more efficient in non-debug mode.

2008-08-11: version 1.0.8

   * Files downloaded directly from SVN crashed due to version information.
   * --synctomaster did not abort when unable to discover the master.
   * An error waiting for the master to catch up caused other tables to fail.
   * Added --bufferinmysql to help make GroupBy algorithm more efficient.
   * Added safety checks to prevent changing data on a slave server.
   * Added --skipslavecheck to prevent safety checks on destination server.