@@ -1310,7 +1310,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# RowDiff package 2801
+# RowDiff package 3249
 # ###########################################################################
 use strict;
 use warnings FATAL => 'all';
@@ -1359,8 +1359,7 @@ sub compare_sets {
       my $cmp;
       if ( $lr && $rr ) {
          $cmp = $self->key_cmp($lr, $rr, $syncer->key_cols(), $tbl);
-         MKDEBUG && _d('Key comparison on left and right: '
-            . (defined $cmp ? $cmp : 'undef'));
+         MKDEBUG && _d('Key comparison on left and right:', $cmp);
       }
       if ( $lr || $rr ) {
          if ( $lr && $rr && defined $cmp && $cmp == 0 ) {
@@ -1386,17 +1385,17 @@ sub compare_sets {
 
 sub key_cmp {
    my ( $self, $lr, $rr, $key_cols, $tbl ) = @_;
-   MKDEBUG && _d("Comparing keys using columns " . join(',', @$key_cols));
+   MKDEBUG && _d('Comparing keys using columns:', join(',', @$key_cols));
    foreach my $col ( @$key_cols ) {
       my $l = $lr->{$col};
       my $r = $rr->{$col};
       if ( !defined $l || !defined $r ) {
-         MKDEBUG && _d("$col is not defined in both rows");
-         return defined $l || -1;
+         MKDEBUG && _d($col, 'is not defined in both rows');
+         return defined $l ? 1 : defined $r ? -1 : 0;
       }
       else {
          if ($tbl->{is_numeric}->{$col} ) {   # Numeric column
-            MKDEBUG && _d("$col is numeric");
+            MKDEBUG && _d($col, 'is numeric');
             my $cmp = $l <=> $r;
             return $cmp unless $cmp == 0;
          }
@@ -1405,11 +1404,11 @@ sub key_cmp {
             my $coll = $tbl->{collation_for}->{$col};
             if ( $coll && ( $coll ne 'latin1_swedish_ci'
                            || $l =~ m/[^\040-\177]/ || $r =~ m/[^\040-\177]/) ) {
-               MKDEBUG && _d("Comparing $col via MySQL");
+               MKDEBUG && _d('Comparing', $col, 'via MySQL');
                $cmp = $self->db_cmp($coll, $l, $r);
             }
             else {
-               MKDEBUG && _d("Comparing $col in lowercase");
+               MKDEBUG && _d('Comparing', $col, 'in lowercase');
                $cmp = lc $l cmp lc $r;
             }
             return $cmp unless $cmp == 0;
@@ -1423,7 +1422,7 @@ sub db_cmp {
    my ( $self, $collation, $l, $r ) = @_;
    if ( !$self->{sth}->{$collation} ) {
       if ( !$self->{charset_for} ) {
-         MKDEBUG && _d("Fetching collations from MySQL");
+         MKDEBUG && _d('Fetching collations from MySQL');
          my @collations = @{$self->{dbh}->selectall_arrayref(
             'SHOW COLLATION', {Slice => { collation => 1, charset => 1 }})};
          foreach my $collation ( @collations ) {
@@ -1446,7 +1445,7 @@ sub _d {
    @_ = map { (my $temp = $_) =~ s/\n/\n# /g; $temp; }
         map { defined $_ ? $_ : 'undef' }
         @_;
-   print "# $package:$line $$ ", @_, "\n";
+   print STDERR "# $package:$line $PID ", join(' ', @_), "\n";
 }
 
 1;
